--- a/SCHOOL/UWtacoma/TCSS343/HW2/HW2.tex
+++ b/SCHOOL/UWtacoma/TCSS343/HW2/HW2.tex
@@ -19,5 +19,6 @@ $$\#\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ size\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ cost
 $$3^0\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ n=\frac{n}{3^0}\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ d$$
 $$3^1\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \frac{n}{3}=\frac{n}{3^1}\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ d$$
 $$3^2\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \frac{n}{9}=\frac{n}{3^2}\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ d$$
-$$i\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \frac{n}{3^i}\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ c$$
+$$i\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \frac{n}{3^i}\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ d$$
+$$ 2^{k}\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ 1\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ c$$
 \end{document}
