--- a/SCHOOL/UWtacoma/TCSS343/HW2/HW2.tex
+++ b/SCHOOL/UWtacoma/TCSS343/HW2/HW2.tex
@@ -20,5 +20,7 @@ $$3^0\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ n=\frac{n}{3^0}\ \ \ \ \ \ \ \ \ \ \ \ \ \ 
 $$3^1\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \frac{n}{3}=\frac{n}{3^1}\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ d$$
 $$3^2\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \frac{n}{9}=\frac{n}{3^2}\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ d$$
 $$i\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \frac{n}{3^i}\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ d$$
-$$ 2^{k}\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ 1\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ c$$
+$$ 2^{k}\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ 1\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ c$$\\ \\
+5.) In this problem we are given parameters for a SUM algorithm and are asked to state 2 self-reductions for this algorithm. I chose the 2 we went over in class for sorting a list, sequentially and divide-and-conquer. First I will show the sequential reduce and conquer algorithm.
+$$Sum(A[a \dots b])=\Bigg\{^{A[a]\ if\ a=b}_{Sum(A[a],\ A[a+1 \dots b])\ if\ a<b}$$
 \end{document}
